tests/fail/ShiftLeftAssign.java
/*
package pass;

public class ShiftLeftAssign {
	public static void main ( String [] args ) {
		System.out.println('a' <<= 42);
	}
}
*/
